fix wrong padding in table

--- a/src/style.css
+++ b/src/style.css
@@ -99,6 +99,7 @@ h3 {
   height:36px;
   line-height:36px;
   text-align:left;
+  margin-top:30px
 }
 .cell {
   width:244px;
